--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,11 +1,4 @@
-- id: secrets-shield-commit
+- id: commit-secrets-shield
   name: Secrets Shield (pre-commit)
   language: python
   entry: secrets-shield
-  args: ["commit"]
-
-- id: secrets-shield-push
-  name: Secrets Shield (pre-push)
-  language: python
-  entry: secrets-shield
-  args: ["push"]
