Fix package issue & add typing

--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,14 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
+black = "==19.3b0"
 
 [packages]
 secrets_shield = {editable = true,path = "."}
-requests = "*"
 pytest = "*"
 aiohttp = "*"
+colorama = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
