Add public scanning client with token management methods

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ black = "==19.3b0"
 secrets_shield = {editable = true,path = "."}
 pytest = "*"
 aiohttp = "*"
+requests = "*"
 
 [requires]
 python_version = "3.6"
