Refactor display and add line count

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,4 +2,4 @@
   name: Secrets Shield (pre-commit)
   language: python
   entry: secrets-shield
-  args: ["scan", "--pre-commit"]
+  args: ["scan", "-m", "pre-commit"]
