Make package work on Python 3.5.0 (Linux, MacOS, Windows)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-GG_SCANNING_API_TOKEN=———————fill me————————
-PUBLIC_SCANNING_API_TOKEN=———————fill me————————
-PUBLIC_SCANNING_API_URL=http://localhost:8000/api/v1
+GITGUARDIAN_TOKEN=__________FILL ME__________
+GITGUARDIAN_API_URL=https://api.gitguardian.com/api/v1/
