--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 GITGUARDIAN_TOKEN=__________FILL ME__________
-GITGUARDIAN_API_URL=https://api.gitguardian.com/api/v1/
+GITGUARDIAN_API_URL=https://api.gitguardian.com/
