feat(client): refactor ggshield to use public api

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ verify_ssl = true
 
 [packages]
 ggshield = {editable = true,path = "."}
+marshmallow ="*"
 requests = "*"
 click = "*"
 pyyaml = "*"
