--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     hooks:
       - id: ggshield
         name: GitGuardian Shield
-        entry: ggshield scan -m pre-commit
+        entry: pipenv run ggshield scan -m pre-commit
         language: python
         language_version: python3
         stages: [commit]
