fix(pre-commit): add isort

--- a/Pipfile
+++ b/Pipfile
@@ -12,9 +12,12 @@ pyyaml = "*"
 
 [dev-packages]
 flake8 = "*"
+flake8-isort = "*"
+flake8-quotes = "*"
 black = "==19.10b0"
 pre-commit = "*"
 pytest = "*"
 mock = "*"
 vcrpy = "*"
+"isort" = "*"
 snapshottest = "*"
