--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,6 @@ exclude = snap_*.py
 
 [metadata]
 description-file = README.md
+
+[settings]
+known_third_party = click,marshmallow,mock,pytest,requests,setuptools,snapshottest,vcr,yaml
