--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,10 @@
+default_stages: [commit]
 repos:
   - repo: https://github.com/ambv/black
     rev: stable
     hooks:
       - id: black
-        language_version: python3
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.1.0
     hooks:
@@ -11,11 +12,26 @@ repos:
       # not python related
       - id: check-json
       - id: check-added-large-files
-  - repo: local
+      - id: check-yaml
+
+  - repo: https://github.com/asottile/seed-isort-config
+    rev: v1.9.1
     hooks:
-      - id: ggshield
-        name: GitGuardian Shield
-        entry: pipenv run ggshield scan -m pre-commit
-        language: python
-        language_version: python3
-        stages: [commit]
+      - id: seed-isort-config
+
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v4.3.20
+    hooks:
+      - id: isort
+
+  - repo: https://github.com/Woile/commitizen
+    rev: master
+    hooks:
+      - id: commitizen
+        # don't forget to run pre-commit install --hook-type commit-msg for this hook to run
+        stages: [commit-msg]
+
+  - repo: https://github.com/prettier/prettier # to format JSON, YAML and markdown files among others
+    rev: master
+    hooks:
+      - id: prettier
