--- a/Pipfile
+++ b/Pipfile
@@ -11,13 +11,14 @@ click = "*"
 pyyaml = "*"
 
 [dev-packages]
+black = "==19.10b0"
+coverage = "*"
 flake8 = "*"
 flake8-isort = "*"
 flake8-quotes = "*"
-black = "==19.10b0"
+mock = "*"
 pre-commit = "*"
 pytest = "*"
-mock = "*"
-vcrpy = "*"
-"isort" = "*"
+seed-isort-config = "*"
 snapshottest = "*"
+vcrpy = "*"
