--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,16 @@
 [flake8]
-ignore = E203,W503,E501
 inline-quotes = double
-max-line-length = 120
-exclude = snap_*.py
+max-line-length = 88
+ignore = E203, W503
+exclude = ggshield/tests/snapshots/*.py
 
 [metadata]
 description-file = README.md
 
-[settings]
+[isort]
+line_length = 88
+lines_after_imports = 2
+multi_line_output = 3
+include_trailing_comma = true
+use_parentheses=true
 known_third_party = click,marshmallow,mock,pytest,requests,setuptools,snapshottest,vcr,yaml
