--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,3 @@
-stages:
-  - test
-
-.core_test: &core_test
-  stage: test
-  before_script:
-    - pipenv install --system --ignore-pipfile --dev
-  except:
-    refs:
-      - tags
-      - preprod
-      - prod
-
 include:
-  - project: "gg-code/gitlab-ci-templates"
-    file: "/python-3.8.tests.yml"
-# override template for python tests
-
-🧀 dependency_scan:pipenv:
-  <<: *core_test
-
-🧀 back:lint:
-  <<: *core_test
-
-test:
-  <<: *core_test
-  image: 513715405986.dkr.ecr.us-west-2.amazonaws.com/tooling/testci-3.8:latest
-  script:
-    - pipenv run coverage run --source ggshield -m pytest --disable-pytest-warnings
-    - pipenv run coverage report --fail-under=80
+  - project: "gg-code/sre/gitguardian-oss"
+    file: "/ggshield.yml"
