feat(ggshield): add regex based ignore

--- a/.gitguardian.yaml
+++ b/.gitguardian.yaml
@@ -1,4 +1,5 @@
-exclude: r"/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.svn|_build|buck-out|build|dist)/"
+exclude: '/tests/'
 
-exclude-match:
-  -
+ignored:
+  match:
+    - one
