feat(ggshield): new config handler and ignore handler

--- a/ggshield/tests/cassettes/multiple_secrets.yaml
+++ b/ggshield/tests/cassettes/multiple_secrets.yaml
@@ -1,9 +1,9 @@
 interactions:
   - request:
-      body: '[{"filename": "test.txt", "document": "@@ -0,0 +1,2 @@\n+FacebookAppKeys
-        :\n+String docker run --name geonetwork -d                 -p 8080:8080 -e MYSQL_HOST=google.com                 -e
+      body: '[{"document": "@@ -0,0 +1,2 @@\n+FacebookAppKeys :\n+String docker run
+        --name geonetwork -d                 -p 8080:8080 -e MYSQL_HOST=google.com                 -e
         MYSQL_PORT=5434 -e MYSQL_USERNAME=root                 -e MYSQL_PASSWORD=m42ploz2wd
-        geonetwork\n"}]'
+        geonetwork\n", "filename": "test.txt"}]'
       headers:
         Accept:
           - '*/*'
@@ -22,7 +22,7 @@ interactions:
     response:
       body:
         string:
-          '[{"policy_break_count":1,"policies":["Secrets detection","File extensions","Filenames"],"policy_breaks":[{"type":"MySQL
+          '[{"policy_break_count":1,"policies":["File extensions","Secrets detection","Filenames"],"policy_breaks":[{"type":"MySQL
           Assignment","policy":"Secrets detection","matches":[{"type":"host","match":"google.com","index_start":118,"index_end":127,"line_start":3,"line_end":3},{"type":"port","match":"5434","index_start":159,"index_end":162,"line_start":3,"line_end":3},{"type":"username","match":"root","index_start":182,"index_end":185,"line_start":3,"line_end":3},{"type":"password","match":"m42ploz2wd","index_start":221,"index_end":230,"line_start":3,"line_end":3}]}]}]'
       headers:
         Allow:
@@ -34,7 +34,7 @@ interactions:
         Content-Type:
           - application/json
         Date:
-          - Tue, 12 May 2020 13:55:25 GMT
+          - Mon, 18 May 2020 15:38:53 GMT
         Server:
           - nginx
         Vary:
