--- a/ggshield/tests/cassettes/no_secret.yaml
+++ b/ggshield/tests/cassettes/no_secret.yaml
@@ -1,7 +1,8 @@
 interactions:
   - request:
-      body: '[{"filename": "test.txt", "document": "@@ -0,0 +1 @@\n+this is a patch
-        without secret\n"}]'
+      body:
+        '[{"document": "@@ -0,0 +1 @@\n+this is a patch without secret\n", "filename":
+        "test.txt"}]'
       headers:
         Accept:
           - '*/*'
@@ -19,7 +20,7 @@ interactions:
       uri: https://api.gitguardian.com/v1/multiscan
     response:
       body:
-        string: '[{"policy_break_count":0,"policies":["Secrets detection","File extensions","Filenames"],"policy_breaks":[]}]'
+        string: '[{"policy_break_count":0,"policies":["File extensions","Secrets detection","Filenames"],"policy_breaks":[]}]'
       headers:
         Allow:
           - POST, OPTIONS
@@ -30,7 +31,7 @@ interactions:
         Content-Type:
           - application/json
         Date:
-          - Tue, 12 May 2020 13:55:29 GMT
+          - Mon, 18 May 2020 15:38:54 GMT
         Server:
           - nginx
         Vary:
