--- a/ggshield/tests/cassettes/simple_secret.yaml
+++ b/ggshield/tests/cassettes/simple_secret.yaml
@@ -1,7 +1,8 @@
 interactions:
   - request:
-      body: '[{"filename": "test.txt", "document": "@@ -0,0 +2 @@\n+Sendgrid:\n+sg_key
-        = \"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\";\n"}]'
+      body:
+        '[{"document": "@@ -0,0 +2 @@\n+Sendgrid:\n+sg_key = \"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\";\n",
+        "filename": "test.txt"}]'
       headers:
         Accept:
           - '*/*'
@@ -20,11 +21,11 @@ interactions:
     response:
       body:
         string:
-          '[{"policy_break_count":1,"policies":["Secrets detection","File extensions","Filenames"],"policy_breaks":[{"type":"SendGrid
+          '[{"policy_break_count":1,"policies":["File extensions","Secrets detection","Filenames"],"policy_breaks":[{"type":"SendGrid
           Key","policy":"Secrets detection","matches":[{"type":"apikey","match":"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","index_start":36,"index_end":104,"line_start":3,"line_end":3}]}]}]'
       headers:
         Allow:
-          - OPTIONS, POST
+          - POST, OPTIONS
         Connection:
           - keep-alive
         Content-Length:
@@ -32,7 +33,7 @@ interactions:
         Content-Type:
           - application/json
         Date:
-          - Tue, 12 May 2020 13:55:27 GMT
+          - Mon, 18 May 2020 15:38:53 GMT
         Server:
           - nginx
         Vary:
