--- a/ggshield/tests/cassettes/test_directory_yes.yaml
+++ b/ggshield/tests/cassettes/test_directory_yes.yaml
@@ -1,8 +1,9 @@
 interactions:
   - request:
-      body: '[{"filename": "file1", "document": "This is a file with no secrets.\n"},
-        {"filename": "dir/file2", "document": "This is a file with no secrets.\n"},
-        {"filename": "dir/subdir/file3", "document": "This is a file with no secrets.\n"}]'
+      body:
+        '[{"document": "This is a file with no secrets.\n", "filename": "dir/subdir/file3"},
+        {"document": "This is a file with no secrets.\n", "filename": "dir/file2"},
+        {"document": "This is a file with no secrets.\n", "filename": "file1"}]'
       headers:
         Accept:
           - '*/*'
@@ -15,18 +16,18 @@ interactions:
         Content-Type:
           - application/json
         User-Agent:
-          - pygitguardian/1.0.3 (Linux;py3.8.2)
+          - pygitguardian/1.0.3 (Linux;py3.8.2) ggshield
       method: POST
       uri: https://api.gitguardian.com/v1/multiscan
     response:
       body:
         string:
-          '[{"policy_break_count":0,"policies":["Secrets detection","File extensions","Filenames"],"policy_breaks":[]},{"policy_break_count":0,"policies":["Secrets
-          detection","File extensions","Filenames"],"policy_breaks":[]},{"policy_break_count":0,"policies":["Secrets
-          detection","File extensions","Filenames"],"policy_breaks":[]}]'
+          '[{"policy_break_count":0,"policies":["File extensions","Secrets detection","Filenames"],"policy_breaks":[]},{"policy_break_count":0,"policies":["File
+          extensions","Secrets detection","Filenames"],"policy_breaks":[]},{"policy_break_count":0,"policies":["File
+          extensions","Secrets detection","Filenames"],"policy_breaks":[]}]'
       headers:
         Allow:
-          - OPTIONS, POST
+          - POST, OPTIONS
         Connection:
           - keep-alive
         Content-Length:
@@ -34,7 +35,7 @@ interactions:
         Content-Type:
           - application/json
         Date:
-          - Tue, 12 May 2020 13:39:31 GMT
+          - Mon, 18 May 2020 15:38:50 GMT
         Server:
           - nginx
         Vary:
