--- a/ggshield/tests/cassettes/test_scan_file.yaml
+++ b/ggshield/tests/cassettes/test_scan_file.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '[{"filename": "file", "document": "This is a file with no secrets.\n"}]'
+      body: '[{"document": "This is a file with no secrets.\n", "filename": "file"}]'
       headers:
         Accept:
           - '*/*'
@@ -13,15 +13,15 @@ interactions:
         Content-Type:
           - application/json
         User-Agent:
-          - pygitguardian/1.0.3 (Linux;py3.8.2)
+          - pygitguardian/1.0.3 (Linux;py3.8.2) ggshield
       method: POST
       uri: https://api.gitguardian.com/v1/multiscan
     response:
       body:
-        string: '[{"policy_break_count":0,"policies":["Secrets detection","File extensions","Filenames"],"policy_breaks":[]}]'
+        string: '[{"policy_break_count":0,"policies":["File extensions","Secrets detection","Filenames"],"policy_breaks":[]}]'
       headers:
         Allow:
-          - OPTIONS, POST
+          - POST, OPTIONS
         Connection:
           - keep-alive
         Content-Length:
@@ -29,7 +29,7 @@ interactions:
         Content-Type:
           - application/json
         Date:
-          - Tue, 12 May 2020 13:39:27 GMT
+          - Mon, 18 May 2020 15:38:46 GMT
         Server:
           - nginx
         Vary:
