--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,15 @@
-name: Application Test and Lint
+name: Application Release
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - 'main'
+    tags-ignore:
+      - '*'
+    paths-ignore:
+      - 'doc/**'
+      - 'README.md'
 
 jobs:
   lint:
@@ -54,10 +63,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
       - name: Scan commit with ggshield
         uses: ./ # local action compiles docker image and runs scan ci
         env:
@@ -67,3 +72,18 @@ jobs:
           GITHUB_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
           GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
+
+  docker-latest:
+    name: Docker push latest
+    runs-on: ubuntu-latest
+    needs: [lint, build, scanning]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build and push
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: gitguardian/gg-shield
+          tags: latest
