--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,5 +93,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: gitguardian/gg-shield
+          repository: gitguardian/ggshield
           tags: latest
