--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -41,5 +41,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: gitguardian/gg-shield
+          repository: gitguardian/ggshield
           tag_with_ref: true
