--- a/tests/cassettes/multiple_secrets.yaml
+++ b/tests/cassettes/multiple_secrets.yaml
@@ -1,8 +1,8 @@
 interactions:
   - request:
       body: '[{"document": "@@ -0,0 +1,2 @@\n+FacebookAppKeys :\n+String docker run
-        --name geonetwork -d                 -p 8080:8080 -e MYSQL_HOST=google.com                 -e
-        MYSQL_PORT=5434 -e MYSQL_USERNAME=root                 -e MYSQL_PASSWORD=m42ploz2wd
+        --name geonetwork -d             -p 8080:8080 -e MYSQL_HOST=google.com             -e
+        MYSQL_PORT=5434 -e MYSQL_USERNAME=root             -e MYSQL_PASSWORD=m42ploz2wd
         geonetwork\n", "filename": "test.txt"}]'
       headers:
         Accept:
@@ -12,18 +12,18 @@ interactions:
         Connection:
           - keep-alive
         Content-Length:
-          - '288'
+          - '276'
         Content-Type:
           - application/json
         User-Agent:
-          - pygitguardian/1.0.3 (Linux;py3.8.2)
+          - pygitguardian/1.0.3 (Linux;py3.8.3)
       method: POST
       uri: https://api.gitguardian.com/v1/multiscan
     response:
       body:
         string:
-          '[{"policy_break_count":1,"policies":["File extensions","Secrets detection","Filenames"],"policy_breaks":[{"type":"MySQL
-          Assignment","policy":"Secrets detection","matches":[{"type":"host","match":"google.com","index_start":118,"index_end":127,"line_start":3,"line_end":3},{"type":"port","match":"5434","index_start":159,"index_end":162,"line_start":3,"line_end":3},{"type":"username","match":"root","index_start":182,"index_end":185,"line_start":3,"line_end":3},{"type":"password","match":"m42ploz2wd","index_start":221,"index_end":230,"line_start":3,"line_end":3}]}]}]'
+          '[{"policy_break_count":1,"policies":["Secrets detection","File extensions","Filenames"],"policy_breaks":[{"type":"MySQL
+          Assignment","policy":"Secrets detection","matches":[{"type":"host","match":"google.com","index_start":114,"index_end":123,"line_start":3,"line_end":3},{"type":"port","match":"5434","index_start":151,"index_end":154,"line_start":3,"line_end":3},{"type":"username","match":"root","index_start":174,"index_end":177,"line_start":3,"line_end":3},{"type":"password","match":"m42ploz2wd","index_start":209,"index_end":218,"line_start":3,"line_end":3}]}]}]'
       headers:
         Allow:
           - POST, OPTIONS
@@ -34,13 +34,15 @@ interactions:
         Content-Type:
           - application/json
         Date:
-          - Mon, 18 May 2020 15:38:53 GMT
+          - Tue, 23 Jun 2020 09:06:59 GMT
         Server:
           - nginx
         Vary:
           - Cookie
+        X-Content-Type-Options:
+          - nosniff
         X-Frame-Options:
-          - SAMEORIGIN
+          - DENY
       status:
         code: 200
         message: OK
