feat(gg-shield): add exit-zero

--- a/.gitguardian.example.yml
+++ b/.gitguardian.example.yml
@@ -14,6 +14,11 @@ show-secrets: false # default: false
 # By default only secrets are detected. Use all-policies to toggle this behaviour.
 all-policies: false # default: false
 
+# Set to true if the desired exit code for the CLI is always 0,
+# otherwise the exit code will be 1 if issues are found
+# the environment variable GITGUARDIAN_EXIT_ZERO=true can also be used toggle this behaviour.
+exit-zero: false # default: false
+
 verbose: false # default: false
 
 api-url: https://api.gitguardian.com
