--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -8,3 +8,7 @@
   language: python
   entry: ggshield
   args: ['scan', '-m', 'pre-commit']
+- id: docker-ggshield
+  name: GitGuardian Shield (docker)
+  language: docker_image
+  entry: -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield scan -m pre-commit
