fix(shell): fix compatibility issue with python 3.6

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ use_parentheses=true
 known_third_party = click,mock,pygitguardian,pytest,setuptools,snapshottest,vcr,yaml
 
 [coverage:report]
-omit = tests/*,ggshield/git_shell.py
+omit = tests/*
 fail_under = 80
 show_missing = True
 
