--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,13 +46,13 @@ repos:
     hooks:
       - id: ggshield-local
         name: GitGuardian Shield
-        entry: ggshield scan -m pre-commit
+        entry: ggshield scan pre-commit
         language: python
         language_version: python3
         stages: [commit]
 
   - repo: https://github.com/gitguardian/gg-shield
-    rev: v1.0.2
+    rev: v1.0.3
     hooks:
       - id: ggshield
         language_version: python3
