--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
         language_version: python3
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: master
+    rev: 3.8.3
     hooks:
       - id: flake8
 
