--- a/pre-commit-config.local-example.yml
+++ b/pre-commit-config.local-example.yml
@@ -2,7 +2,7 @@
   hooks:
     - id: ggshield
       name: GitGuardian Shield
-      entry: ggshield scan -m pre-commit
+      entry: ggshield scan pre-commit
       language: python
       language_version: python3
       stages: [commit]
