--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ lines_after_imports = 2
 multi_line_output = 3
 include_trailing_comma = true
 use_parentheses=true
-known_third_party = click,mock,pygitguardian,pytest,setuptools,snapshottest,vcr,yaml
+known_third_party = click,dotenv,mock,pygitguardian,pytest,setuptools,snapshottest,vcr,yaml
 
 [coverage:report]
 omit = tests/*
@@ -23,3 +23,13 @@ show_missing = True
 [coverage:run]
 source = .
 omit = tests/*
+
+[mypy]
+ignore_missing_imports = True
+disallow_incomplete_defs = True
+warn_unused_configs = True
+check_untyped_defs = True
+warn_unused_ignores = True
+
+[mypy-*.tests.*]
+ignore_errors = True
