test(mypy): toughen mypy

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,11 +25,21 @@ source = .
 omit = tests/*
 
 [mypy]
-ignore_missing_imports = True
-disallow_incomplete_defs = True
-warn_unused_configs = True
 check_untyped_defs = True
+disallow_incomplete_defs = True
+disallow_untyped_defs=True
+follow_imports = silent
+ignore_missing_imports = True
+no_implicit_optional=True
+python_version=3.8
+strict_equality=True
+strict_optional=True
+warn_incomplete_stub = True
+warn_redundant_casts=True
+warn_return_any = True
+warn_unreachable = True
+warn_unused_configs = True
 warn_unused_ignores = True
 
-[mypy-*.tests.*]
+[mypy-tests.*]
 ignore_errors = True
