ci(isort): update config

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,12 +8,8 @@ exclude = **/snapshots/*.py
 description-file = README.md
 
 [isort]
-line_length = 88
+profile = black
 lines_after_imports = 2
-multi_line_output = 3
-include_trailing_comma = true
-use_parentheses=true
-known_third_party = click,dotenv,mock,pygitguardian,pytest,setuptools,snapshottest,vcr,yaml
 
 [coverage:report]
 omit = tests/*
