--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     hooks:
       - id: black
         language_version: python3
+        exclude: snap_
 
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
