--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,37 +8,37 @@ repos:
         exclude: snap_
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 3.8.4
     hooks:
       - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.782
+    rev: v0.790
     hooks:
       - id: mypy
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v3.4.0
     hooks:
       - id: check-json
       - id: check-added-large-files
       - id: check-yaml
 
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.5.3
+    rev: v5.7.0
     hooks:
       - id: isort
         args: [--settings-path, setup.cfg]
 
   - repo: https://github.com/Woile/commitizen
-    rev: v2.4.0
+    rev: v2.13.0
     hooks:
       - id: commitizen
         # don't forget to run pre-commit install --hook-type commit-msg for this hook to run
         stages: [commit-msg]
 
-  - repo: https://github.com/prettier/prettier # to format JSON, YAML and markdown files among others
-    rev: 2.1.2
+  - repo: https://github.com/pre-commit/mirrors-prettier # to format JSON, YAML and markdown files among others
+    rev: v2.2.1
     hooks:
       - id: prettier
 
