chore(ggshield): rename policy break into incident/occurrence on display

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'ggshield Local Action'
-description: 'Scan commits for policy breaks (using repository image)'
+description: 'Scan commits for security incidents (using repository image)'
 branding:
   icon: 'shield'
   color: 'blue'
