--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,11 @@
 target-version = ['py36']
 line-length = 88
 exclude = 'snap_'
+
+[tool.pytest.ini_options]
+addopts = "--pdbcls=IPython.terminal.debugger:Pdb --durations=10 --durations-min=3.0 --tb=short"
+python_files = ["tests.py", "test_*.py", "*_tests.py"]
+testpaths = [
+  "tests/",
+]
+
