chore(actions): provide a valid token

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -92,7 +92,7 @@ jobs:
         uses: actions/checkout@master
         with:
           repository: GitGuardian/homebrew-ggshield
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           path: ./brew
 
       - name: Install dependencies
